--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ plugins {
 
 mainClassName = 'ds.wosaj.Main'
 
-version '1.0'
-
-group 'ds.wosaj'
+group 'tk.wosaj'
 version '0.0.1 ALPHA'
 
 repositories {
@@ -23,7 +21,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation("net.dv8tion:JDA:4.3.0_277")
     implementation("com.google.code.gson:gson:2.8.9")
-    implementation ("org.reflections:reflections:0.10.2")
+    implementation("org.reflections:reflections:0.10.2")
+    implementation("org.postgresql:postgresql:42.3.1")
 }
 
 test {
