--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation("com.google.code.gson:gson:2.8.9")
     implementation("org.reflections:reflections:0.10.2")
     implementation("org.postgresql:postgresql:42.3.1")
+    implementation("org.hibernate:hibernate-java8:5.6.4.Final")
 }
 
 test {
