--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id'application'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
-
 mainClassName = 'ds.wosaj.Main'
 
 group 'tk.wosaj'
@@ -24,6 +23,8 @@ dependencies {
     implementation("org.reflections:reflections:0.10.2")
     implementation("org.postgresql:postgresql:42.3.1")
     implementation("org.hibernate:hibernate-java8:5.6.4.Final")
+    implementation("org.slf4j:slf4j-log4j12:1.7.30")
+    implementation("log4j:log4j:1.2.17")
 }
 
 test {
