--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,16 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    implementation("net.dv8tion:JDA:4.3.0_277")
-    implementation("com.google.code.gson:gson:2.8.9")
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation("net.dv8tion:JDA:5.0.0-alpha.9")
+    implementation('com.google.code.gson:gson:2.9.0')
     implementation("org.reflections:reflections:0.10.2")
-    implementation("org.postgresql:postgresql:42.3.1")
-    implementation("org.hibernate:hibernate-java8:5.6.4.Final")
-    implementation("org.slf4j:slf4j-log4j12:1.7.30")
+    implementation('org.postgresql:postgresql:42.3.3')
+    implementation('org.hibernate:hibernate-java8:5.6.5.Final')
+    implementation('org.slf4j:slf4j-log4j12:1.7.36')
     implementation("log4j:log4j:1.2.17")
+    implementation("org.mozilla:rhino:1.7.14")
 }
 
 test {
