--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,6 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     implementation("net.dv8tion:JDA:5.0.0-alpha.9")
     implementation('com.google.code.gson:gson:2.9.0')
     implementation("org.reflections:reflections:0.10.2")
@@ -32,5 +30,8 @@ test {
     useJUnitPlatform()
 }
 
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
+jar {
+    manifest {
+        attributes "Main-Class": "tk.wosaj.lambda.Main"
+    }
+}
