--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ plugins {
     id'application'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
-mainClassName = 'ds.wosaj.Main'
+
+mainClassName = "tk.wosaj.lambda.Main"
 
 group 'tk.wosaj'
 version '0.0.1 ALPHA'
@@ -19,11 +20,29 @@ dependencies {
     implementation("net.dv8tion:JDA:5.0.0-alpha.9")
     implementation('com.google.code.gson:gson:2.9.0')
     implementation("org.reflections:reflections:0.10.2")
-    implementation('org.postgresql:postgresql:42.3.3')
-    implementation('org.hibernate:hibernate-java8:5.6.5.Final')
+    implementation('org.postgresql:postgresql:42.3.4')
+    implementation('org.hibernate:hibernate-java8:5.6.8.Final')
     implementation('org.slf4j:slf4j-log4j12:1.7.36')
     implementation("log4j:log4j:1.2.17")
     implementation("org.mozilla:rhino:1.7.14")
+}
+
+shadowJar {
+    dependencies {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+        exclude "META-INF/LICENSE"
+        exclude "META-INF/LICENSE.txt"
+        exclude "META-INF/README"
+        exclude "META-INF/NOTICE"
+        exclude "META-INF/NOTICE.txt"
+        exclude "META-INF/NOTICE-tools.txt"
+        exclude "META-INF/licenses/"
+        exclude "META-INF/maven/"
+        exclude "META-INF/proguard/"
+        exclude "META-INF/versions/"
+    }
 }
 
 test {
